# email/swagger.yaml
@@ -223,6 +223,170 @@ paths:
           description: 创建成功
           schema:
             $ref: '#/definitions/Email'
+  /smtps:
+    post:
+      summary: 创建单个邮件配置
+      description: 创建单个邮件配置...
+      parameters:
+        - in: body
+          name: body
+          description: 模型参数
+          required: true
+          schema:
+            $ref: '#/definitions/Smtp'
+      responses:
+        '200':
+          description: 创建成功
+    get:
+      summary: 查询多个邮件配置
+      description: 查询多个邮件配置...
+      parameters:
+        - in: query
+          name: pageNum
+          type: integer
+          description: 页码
+          default: 1
+        - in: query
+          name: pageSize
+          type: integer
+          description: 分页大小
+          default: 10
+        - in: query
+          name: sorter
+          type: string
+          description: 排序
+      responses:
+        '200':
+          description: 查询成功
+          schema:
+            type: object
+            properties:
+              count:
+                type: integer
+              rows:
+                type: array
+                items:
+                  $ref: '#/definitions/Smtp'
+    patch:
+      summary: 更新多个邮件配置
+      description: 更新多个邮件配置...
+      parameters:
+        - in: body
+          name: body
+          description: body参数
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Smtp'
+      responses:
+        '200':
+          description: 更新成功
+    delete:
+      summary: 删除多个邮件配置
+      description: 删除多个邮件配置...
+      parameters:
+        - in: body
+          name: body
+          description: body参数
+          schema:
+            type: object
+            example:
+              id:
+                - '1'
+                - '2'
+      responses:
+        '200':
+          description: 更新成功
+  '/smtps/{id}':
+    get:
+      summary: 查询单个邮件配置
+      description: 查询单个邮件配置..
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: ID
+      responses:
+        '200':
+          description: 查询成功
+          schema:
+            $ref: '#/definitions/Smtp'
+    patch:
+      summary: 修改单个邮件配置
+      description: 修改单个邮件配置..
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: ID
+        - in: body
+          name: body
+          description: 模型参数
+          required: true
+          schema:
+            $ref: '#/definitions/Smtp'
+      responses:
+        '200':
+          description: 修改成功
+    delete:
+      summary: 删除单个邮件配置
+      description: 删除单个邮件配置..
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: ID
+      responses:
+        '200':
+          description: 删除成功
+  /smtps/multiple:
+    post:
+      summary: 创建多个邮件配置
+      description: 创建多个邮件配置...
+      parameters:
+        - in: body
+          name: body
+          description: body参数
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Smtp'
+      responses:
+        '200':
+          description: 创建成功
+  /smtp:
+    get:
+      summary: 查询单个邮件配置
+      description: 查询单个邮件配置...
+      parameters:
+        - in: query
+          name: id
+          type: string
+          description: 不限于id，可以是任意参数
+          required: true
+      responses:
+        '200':
+          description: 查询成功
+          schema:
+            $ref: '#/definitions/Smtp'
+    post:
+      summary: 查找或创建单个邮件配置
+      description: 查找或创建单个邮件配置...
+      parameters:
+        - in: body
+          name: body
+          description: 模型参数
+          required: true
+          schema:
+            $ref: '#/definitions/Smtp'
+      responses:
+        '200':
+          description: 创建成功
+          schema:
+            $ref: '#/definitions/Smtp'
 definitions:
   Email:
     type: object
@@ -244,33 +408,31 @@ definitions:
       sender:
         type: string
         format: string(128)
-        description: 仓库编号
+        description: 发送人 <邮箱账号>
         x-message: 请输入
         x-showTable: true
       receivers:
         type: string
         format: string(255)
-        description: 仓库编号
+        description: 接收人
         x-message: 请输入
         x-showTable: true
       subject:
         type: string
         format: string(255)
-        description: 仓库编号
+        description: 标题
         x-message: 请输入
         x-showTable: true
       text_body:
         type: string
         format: text
-        description: 仓库编号
+        description: TEXT内容
         x-message: 请输入
-        x-showTable: true
       html_body:
         type: string
         format: text
-        description: 仓库编号
+        description: HTML内容
         x-message: 请输入
-        x-showTable: true
       send_time:
         type: string
         format: date-time
@@ -305,6 +467,71 @@ definitions:
       receivers: receivers@test.com
       subject: hello
       text_body: how are you?
+  Smtp:
+    type: object
+    x-isModel: true
+    x-plural: Smtps
+    x-tableName: smtp
+    description: 邮件配置
+    required:
+      - id
+      - sender
+      - host
+      - port
+      - secure
+      - user
+      - pass
+    properties:
+      id:
+        type: string
+        format: uuid
+        description: ID
+        uniqueItems: true
+      sender:
+        type: string
+        format: string(128)
+        description: 发送人
+        x-message: 请输入
+        uniqueItems: true
+        x-showTable: true
+      host:
+        type: string
+        format: string(128)
+        description: SMTP服务器
+        x-message: 请输入
+        x-showTable: true
+      port:
+        type: integer
+        format: int4
+        description: SMTP端口
+        x-message: 请输入
+        x-showTable: true
+      secure:
+        type: boolean
+        format: boolean
+        description: 是否加密
+        default: true
+        x-message: 请输入
+        x-showTable: true
+      user:
+        type: string
+        format: string(128)
+        description: 邮箱账号
+        x-message: 请输入
+        x-showTable: true
+      pass:
+        type: string
+        format: string(128)
+        description: 邮箱密码
+        x-message: 请输入
+    example:
+      id: '123'
+      sender: test
+      host: smtp.exmail.qq.com
+      port: 465
+      secure: true
+      user: test@test.com
+      pass: '******'
   UserDemo:
     type: object
     description: 用户模型
